fishnet/tests/ui/component/state_outside_component.rs
use fishnet::component::prelude::*;

struct MyState {}

fn main() {
    state!(Arc<MyState>);
}
